# unkubed

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  wsgi.py
migrations/: README  env.py  script.py.mako
migrations/versions/: 20240624_0001_initial_tables.py
scripts/: check_docker.sh  docker-entrypoint.sh  prepare_kubeconfig.py  run_app.sh  run_migrations.sh  start_db.sh
tests/: conftest.py  test_app_factory.py  test_auth.py  test_services.py  test_templates.py  test_troubleshooting.py
unkubed/: __init__.py  config.py  extensions.py  models.py
unkubed/auth/: forms.py  routes.py
unkubed/clusters/: forms.py  routes.py
unkubed/command_history/: routes.py
unkubed/dashboard/: routes.py
unkubed/main/: routes.py
unkubed/models/: __init__.py  cluster.py  command_history.py  saved_template.py  troubleshooting_report.py  user.py
unkubed/resources/: routes.py
unkubed/services/: cluster_context.py  kube.py  paths.py  templates.py
unkubed/static/css/: main.css
unkubed/static/js/: theme.js
unkubed/templates/: base.html
unkubed/templates/auth/: login.html  register.html
unkubed/templates/clusters/: connect.html
unkubed/templates/commands/: history.html
unkubed/templates/dashboard/: index.html
unkubed/templates/main/: features.html  index.html
unkubed/templates/resources/: deployments.html  namespaces.html  pod_detail.html  pods.html  services.html
unkubed/templates/templates/: list.html  new.html
unkubed/templates_module/: forms.py  routes.py
unkubed/troubleshooting/: heuristics.py
