[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unkubed"
version = "0.1.0"
description = "Unkubed — a learning-first Kubernetes inspection assistant built with Flask."
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "email-validator>=2.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "psycopg[binary]>=3.1",
    "requests>=2.31",
    "click>=8.1",
    "gunicorn>=21.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-flask>=1.3",
    "coverage>=7.4"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["unkubed*"]
exclude = ["tests*", "scripts*", "migrations*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.flask]
app = "unkubed:create_app"
